--- a/app/Pipfile
+++ b/app/Pipfile
@@ -12,3 +12,7 @@ djangorestframework = "==3.11.0"
 
 [requires]
 python_version = "3.7.5"
+
+[scripts]
+server = "python manage.py runserver"
+migrate = "python manage.py migrate"
