Add makemigrations command shortcut

--- a/app/Pipfile
+++ b/app/Pipfile
@@ -16,3 +16,4 @@ python_version = "3.7.5"
 [scripts]
 server = "python manage.py runserver"
 migrate = "python manage.py migrate"
+makemigrations = "python manage.py makemigrations"
