--- a/app/Pipfile
+++ b/app/Pipfile
@@ -18,3 +18,4 @@ python_version = "3.7.5"
 server = "python manage.py runserver"
 migrate = "python manage.py migrate"
 makemigrations = "python manage.py makemigrations"
+addlearningunits = "python manage.py add_learning_units"
