--- a/app/Pipfile
+++ b/app/Pipfile
@@ -8,6 +8,7 @@ django = "==3.0.5"
 gunicorn= "==19.9.0"
 djangorestframework = "==3.11.0"
 django-cors-headers = "==3.2.1"
+django-filter = "==2.2.0"
 
 [dev-packages]
 
