--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - media_volume:/usr/src/app/mediafiles
     expose:
       - 8000
-    env_file: app/.env
+    env_file: .env
     depends_on:
       - db
   db:
