--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Publish to Registry Nginx
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: ${{ secrets.DOCKER_REPOSITORY }}-nginx
         username: ${{ secrets.DOCKER_USERNAME }}
@@ -20,7 +20,7 @@ jobs:
         workdir: nginx
         
     - name: Publish to Registry API
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: ${{ secrets.DOCKER_REPOSITORY }}-api
         username: ${{ secrets.DOCKER_USERNAME }}
